2001-12-09  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/reporter.c (output_summary): Set origsize and 
	  outsize correctly.

2001-12-09  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/driver.c (start_some_dumps): Fixup length of dumporder.

2001-12-07  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* recover-src/extract_list.c: You can change the tape device
	  between each tape.

2001-12-07  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* restore-src/amrestore.c (restore): try to find the next chunk
	  in the current directory.

2001-12-07  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* example/amanda.conf.in: typo.

2001-12-07  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	
	Patch by Roland E. Lipovits <rel@lipo.at0.net>
	* example/amanda.conf.in: typo.

2001-12-04  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/dumper.c, server-src/taper.c: Replace TRY_AGAIN
	by TRYAGAIN.

2001-11-30  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* Amanda 2.4.3b1 released
	* configure.in: AM_INIT_AUTOMAKE(amanda, 2.4.3b1)
	* NEWS: New feature of amanda-2.4.3

2001-11-11  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/diskfile.c (lookup_host): Match must be exact.

2001-11-10  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/planner.c: Add host, disk, datestamp and level on
	FLUSH line. Add datestamp on DUMP line.
	* server-src/driver.c (read_flush): Read new format of FLUSH line.
	* server-src/driver.c (read_schedule): Read new format of DUMP line.
	* server-src/amflush.c: Write a datestamp on stderr.
	* server-src/amdump.sh.in: Write a datestamp on stderr.
	* server-src/amstatus.pl.in: Works with autoflush.

2001-11-08  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/conffile.c (autoflush): New configuration options.
	* server-src/conffile.h (autoflush): New configuration options.
	* man/amanda.8.in: Document it.